# appdaemon-apps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
apps/: __init__.py  apps.yaml  bb_processor.py
data/: birds_event.json  birds_event.yml  birds_event_two_birds.yml
scripts/: blocks.py
tests/: __init__.py  conftest.py  test_bb_processor.py
