[project]
name = "ha-automation-birdbuddy"
version = "2024.4.7"

description = "Lovely Spam! Wonderful Spam!"
# readme = "README.md"
# license = "MIT"
# keywords = ["spam", "lovely", "wonderful"]
# classifiers = [
#   "Development Status :: 4 - Beta",
#   "Intended Audience :: Developers",
#   "License :: OSI Approved :: MIT License",
#   "Programming Language :: Python :: 3",
#   "Programming Language :: Python :: 3.12",
# ]

authors = [{ name = "Ondrej Gajdusek", email = "ondrej@gajdusek.dev" }]
maintainers = [{ name = "Ondrej Gajdusek", email = "ondrej@gajdusek.dev" }]

dependencies = ["pydantic", "pyjwt", "pydantic-yaml", "slackblocks", "wikipedia"]

[project.optional-dependencies]
lint = ["pre-commit", "ruff"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".pytype",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
  "ANN",
  "ARG",
  "B",
  "C",
  "COM",
  "D",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "PGH",
  "PL",
  "PLR",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "SLF",
  "TRY",
  "UP",
  "N",    # PEP8 naming conventions
  "S",    # Security (bandit)
  "A",    # Builtins shadowing prevention
  "BLE",  # Blind except prevention
  "PIE",  # Miscellaneous helpful rules
]
# Q000,ANN,PT009,D,E501,
ignore = [
  "D107",   # Missing docstring in __init__
  "FBT001", # Boolean positional arg in function definition
  "D203",   # 1 blank line required before class docstring
  "D213",   # Multi-line docstring summary should start at the first line
  "FBT001", # Boolean positional argument in function definition
  "COM812", # Missing trailing comma, this is handled by the formatter
  "S101", # Use of assert detected
]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
